fix word overlap in text-only mode

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -857,6 +857,9 @@ tr.accuracy_non_mastered {
     animation: throb 1.5s ease-in-out infinite;
   }
 }
+.button_list.text_only {
+  max-width: none;
+}
 .cursor_holder {
   position: relative;
   .cursor_navigation {
